[main] feat: other featuers
